--- a/Methodology.tex
+++ b/Methodology.tex
@@ -15,11 +15,11 @@ The methodology is separated into the specific objectives mentioned in \S\ref{ch
 \label{sec:atmcorr}
 The first objective in this research is to identify a suitable approach to atmospherically correct the type of dataset provided by the OLI sensor. This is a complex task to perform over water because the signal leaving the water that reaches the sensor is very small compared to the signal reaching the sensor from atmospheric scattering. 
 
-Most of the atmospheric correction algorithms used for the heritage Ocean Color instruments (e.g. CZCS, MODIS and SeaWiFS) are based in the work done by \cite{Gordon:1994} (also described in \cite{Gordon:1997}). The NASA's standard algorithms for atmospheric correction based on Gordon and Wang (1994)\cite{Gordon:1994} have proved to work well in Case 1 waters where there are at least two wavelengths with a water-leaving signal negligible or known. Therefore, these algorithms could be considered a global solution for Case 1 waters, i.e. they could be applied in most cases. The wavelengths used for clear waters (Case 1) are in general in the near infrared (NIR) part of the spectrum. For highly turbid water (Case 2) or highly productive Case 1 waters, a combination of wavelengths in the NIR and shortwave infrared (SWIR), or two SWIR wavelengths can be used\cite{Wang:2007,Wang:2007dz,Wang2009}. Some efforts have been made to demonstrate the feasibility of using Landsat 8 for ocean color measurements in coastal waters that apply the Gordon and Wang approach\cite{Vanhellemont2014a,Vanhellemont2014,Vanhellemont:2015,Franz:2015} for the atmospheric correction using the NIR and SWIR 1 bands or the SWIR 1 and SWIR 2 bands. One problem with using the Gordon and Wang approach is that it requires a sufficient SNR over water in order to discriminate the water-leaving signal from the instrument noise. This could be particular important for OLI since it has a lower SNR than the heritage ocean color instruments have, and so derived ocean color products can be noisy.
+Most of the atmospheric correction algorithms used for the heritage Ocean Color instruments (e.g. CZCS, MODIS and SeaWiFS) are based in the work done by \cite{Gordon:1994} (also described in \cite{Gordon:1997}). The NASA's standard algorithms for atmospheric correction based on \cite{Gordon:1994} have proved to work well in Case 1 waters where there are at least two wavelengths with a water-leaving signal negligible or known. Therefore, these algorithms could be considered a global solution for Case 1 waters, i.e. they could be applied in most cases. The wavelengths used for clear waters (Case 1) are in general in the near infrared (NIR) part of the spectrum. For highly turbid water (Case 2) or highly productive Case 1 waters, a combination of wavelengths in the NIR and shortwave infrared (SWIR), or two SWIR wavelengths can be used\cite{Wang:2007,Wang:2007dz,Wang2009}. Some efforts have been made to demonstrate the feasibility of using Landsat 8 for ocean color measurements in coastal waters that apply the Gordon and Wang approach\cite{Vanhellemont2014a,Vanhellemont2014,Vanhellemont:2015,Franz:2015} for the atmospheric correction using the NIR and SWIR 1 bands or the SWIR 1 and SWIR 2 bands. One problem with using the Gordon and Wang approach is that it requires a sufficient SNR over water in order to discriminate the water-leaving signal from the instrument noise. This could be particular important for OLI since it has a lower SNR than the heritage ocean color instruments have, and so derived ocean color products can be noisy.
 
-However, some of the atmospheric correction algorithms applied to the heritage Ocean Color instruments are not suitable for highly turbid coastal waters because the {\it black pixel assumption} cannot be applied to these types of waters~\cite{Patt2003}. Concha and Schott (2014)\cite{Concha2014SPIE} developed the model-based empirical line method (MoB-ELM) as an alternative for the standard atmospheric correction algorithms that does not rely on a negligible water-leaving signal assumption, and therefore it is not as sensitive to the SNR. The MoB-ELM algorithm uses a bright and dark pixel from the image to perform the atmospheric correction. One of the goals of this work is to compare the MoB-ELM with the standard algorithms as well as with {\it in situ} data. These comparisons are made in remote-sensing reflectance $R_{rs}$ units. 
+However, some of the atmospheric correction algorithms applied to the heritage Ocean Color instruments are not suitable for highly turbid coastal waters because the {\it black pixel assumption} cannot be applied to these types of waters~\cite{Patt2003}. \cite{Concha2014SPIE} developed the model-based empirical line method (MoB-ELM) as an alternative for the standard atmospheric correction algorithms that does not rely on a negligible water-leaving signal assumption, and therefore it is not as sensitive to the SNR. The MoB-ELM algorithm uses a bright and dark pixel from the image to perform the atmospheric correction. One of the goals of this work is to compare the MoB-ELM with the standard algorithms as well as with {\it in situ} data. These comparisons are made in remote-sensing reflectance $R_{rs}$ units. 
 
-Two approaches for atmospheric compensation are investigated in this research. The Gordon and Wang approach, and the Concha and Schott approach.\todo{check if valid statement}
+Two approaches for atmospheric compensation are investigated in this research: the Gordon and Wang approach, and the Concha and Schott approach.\todo{check if valid statement}
 
 Some atmospheric correction methods described in this section will use the notation used by \cite{Gordon:1994} and \cite{Ruddick:2000bs} who define the apparent reflectance as 
 
@@ -86,7 +86,7 @@ Once water pixels in the image are deglinted, the next step is to atmosphericall
 
 \subsection{Model-Based Empirical Line Method (MoB-ELM) Atmospheric Correction Method}
 
-The first method will be a model-based empirical line method (MoB-ELM) based on previous work done by \cite{Gerace:2013} and \cite{Gerace:2012}  for simulated OLI data. While this new method is based on the traditional ELM method (see \S\ref{subsec:ELM}), this model-based ELM method tries to avoid the measurement of ground truth at every sensor overpass over the scene by using pseudo-invariant features (PIF) \index{pseudo-invariant features (PIF)} in the scene as one target along with an estimation of water reflectivity for an open lake region for the other target. The two targets used in this model-based ELM to solve the regression in \autoref{eq:ELM} are referred to in this documents as the {\it bright pixel} \index{bright pixel} and the {\it dark pixel}\index{dark pixel}.
+The first method will be a model-based empirical line method (MoB-ELM) based on previous work done by \cite{Gerace:2013} and \cite{Gerace:2012}  for simulated OLI data and adapted by \cite{Concha2014SPIE} for actual OLI data. While this new method is based on the traditional ELM method (see \S\ref{subsec:ELM}), this MoB-ELM method tries to avoid the measurement of ground truth at every sensor overpass over the scene by using pseudo-invariant features (PIF) \index{pseudo-invariant features (PIF)} in the scene as one target along with an estimation of water reflectivity for an open lake region for the other target. In the MoB-ELM atmospheric correction method, the dark pixel is obtained from a run of the radiative transfer model Hydrolight\cite{MobleyHEtech} simulating a water pixel in the scene with known CPAs concentrations and inherent optical properties (IOPs). The bright pixel is obtained from the Provisional Landsat 8 Surface Reflectance product\cite{L8SurfProduct2015} from USGS over a bright object in the scene or an average of bright pixels in the scene. The two targets used in this MoB-ELM to solve the regression in \autoref{eq:ELM} are referred to in this documents as the {\it bright pixel} \index{bright pixel} and the {\it dark pixel}\index{dark pixel}.
 
 \subsubsection{Pseudo-Invariant Feature Extraction}
 
@@ -317,7 +317,7 @@ It was determined that the best matched corresponds to the discretized Fournier-
 
 The following parameters were input to Ecolight in order to simulate the Landsat acquisition conditions. The illumination conditions were input to Ecolight by specifying the solar zenith angle and day of the year that matched the Landsat-8 image. Internal sources and inelastic scatter were not included in the simulations. The wavelength range was $[400nm,1000nm]$, with a $1nm$ step. Default values for the air-water surface conditions were used, with a windspeed equal to $5m/s$, a real index of refraction equal to $n=1.34$, and the semi-empirical sky model (based on RADTRAN-X). Recall that Hydrolight uses a Cox-Munk air-water surface model that parameterizes gravity and capillary waves via the wind speed \todo{reference to Cox-Munk}. Finally, The bottom boundary condition used was ``the water column is infinitely deep.''
 
-This best matched is used as the reflectance spectra of the dark pixel in the model-based ELM method. This reflectance is further spectrally sampled to the Landsat-8 response. 
+This best matched is used as the reflectance spectra of the dark pixel in the MoB-ELM method. This reflectance is further spectrally sampled to the Landsat-8 response. 
 
 \begin{figure}[htb]
   	\centering
@@ -329,7 +329,7 @@ The radiance spectra for the dark pixel is obtained from a ROI in the water pres
 
 \missingfigure{figure showing and ROI in the Landsat-8 image and statistic in ENVI}
 
-As a review, \autoref{fig:ELMpxsENVI} shows the different spectra used to perform the model-based ELM, where four different spectra can be seen: one reflectance and one radiance spectra for the bright pixel (obtained using the PIF extraction over the Landsat reflectance product and Landsat-8 image, respectively), one reflectance spectra for the dark pixel (obtained from HydroLight), and one radiance spectra for bright pixel (obtained from the statistics of a ROI over water in the Landsat-8 image). These spectra are used to atmospherically correct the Landsat-8 image using the ENVI Classic software \cite{ENVIUserGuide}. This is performed using the ``Empirical Line'' algorithm of the ``Calibration Utilities'' in ENVI classic, where the Landsat-8 image is used as the input image, and the reflectance spectra are labeled as ``field spectra'' and the radiance spectra are labeled as ``data spectra.'' The product of this process is an image in reflectance values, which will be used to perform the retrieval of water constituents described in \S\ref{sec:retrieval} below. Note that the Landsat-8 image used was not glint corrected.
+As a review, \autoref{fig:ELMpxsENVI} shows the different spectra used to perform the MoB-ELM, where four different spectra can be seen: one reflectance and one radiance spectra for the bright pixel (obtained using the PIF extraction over the Landsat reflectance product and Landsat-8 image, respectively), one reflectance spectra for the dark pixel (obtained from HydroLight), and one radiance spectra for bright pixel (obtained from the statistics of a ROI over water in the Landsat-8 image). These spectra are used to atmospherically correct the Landsat-8 image using the ENVI Classic software \cite{ENVIUserGuide}. This is performed using the ``Empirical Line'' algorithm of the ``Calibration Utilities'' in ENVI classic, where the Landsat-8 image is used as the input image, and the reflectance spectra are labeled as ``field spectra'' and the radiance spectra are labeled as ``data spectra.'' The product of this process is an image in reflectance values, which will be used to perform the retrieval of water constituents described in \S\ref{sec:retrieval} below. Note that the Landsat-8 image used was not glint corrected.
 
 \begin{figure}[htb]
   \centering
@@ -337,7 +337,7 @@ As a review, \autoref{fig:ELMpxsENVI} shows the different spectra used to perfor
   \caption{Bright and Dark pixels used in ENVI to apply ELM. \label{fig:ELMpxsENVI} } 
   % \vspace{0.5cm}
 \end{figure}
-\todo{include summary of model-based ELM}
+\todo{include summary of MoB-ELM}
 
 % ----------------------------
 \subsection{SeaWiFS Algorithm for Case 1 Waters}
@@ -577,7 +577,7 @@ The retrieval algorithm will be based on previous work done by Gerace {\it et al
 Additionally, this study presents a comparison of chlorophyll-{\it a} concentrations ($C_a$) retrieved from the standard atmospheric correction algorithms and from the MoB-ELM algorithms. The NASA's standard bio-optical algorithms OC2, OC3, OC4\cite{OReilly2000} and OCI\cite{Hu:2012} for the retrieval of chlorophyll-{\it a} were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of color producing agents (CPAs; chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore these data are not fully representative of Case 2 waters. Gerace {\it et al.} (2013)\cite{Gerace:2013} developed an algorithm for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) using simulated OLI data. Concha and Schott (2014)\cite{Concha2013IGARSS} extended Gerace's approach to actual OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site.
 % -------------------------------------
 \subsection{LUT generation}
-The LUT is generated in Ecolight~\cite{MobleyHE} for different triplets of water constituent concentrations (CPAs). Ecolight was used in the same fashion as in the black pixel determination for the model-based ELM (\S\ref{subsubsec:blackpixel}). \autoref{tab:LUTconc2} shows the different parameters used to create the LUT in Ecolight. Two different sets of IOPs (mass-specific absorption and scattering spectra) were used, one set for modeling the open lake conditions (low concentration of CPAs) and one set for modeling the pond condition (high concentration of CPAs)\todo{show IOPs figures}. These IOPs are labeled in \autoref{tab:LUTconc2} as ``ONTNS'' for the open lake conditions and as ``LONGS'' for the pond conditions. \autoref{tab:LUTconc2} also shows the CPAs concentration used to create the LUT in Ecolight. Furthermore, discretized Fournier-Forand phase function with four different backscatter fraction values ($0.5$, $1.0$, $1.5$ and $2.0\%$) were used to account for the backscattering variability in the scene.
+The LUT is generated in Ecolight~\cite{MobleyHE} for different triplets of water constituent concentrations (CPAs). Ecolight was used in the same fashion as in the black pixel determination for the MoB-ELM (\S\ref{subsubsec:blackpixel}). \autoref{tab:LUTconc2} shows the different parameters used to create the LUT in Ecolight. Two different sets of IOPs (mass-specific absorption and scattering spectra) were used, one set for modeling the open lake conditions (low concentration of CPAs) and one set for modeling the pond condition (high concentration of CPAs)\todo{show IOPs figures}. These IOPs are labeled in \autoref{tab:LUTconc2} as ``ONTNS'' for the open lake conditions and as ``LONGS'' for the pond conditions. \autoref{tab:LUTconc2} also shows the CPAs concentration used to create the LUT in Ecolight. Furthermore, discretized Fournier-Forand phase function with four different backscatter fraction values ($0.5$, $1.0$, $1.5$ and $2.0\%$) were used to account for the backscattering variability in the scene.
 
 
 \begin{table}[htb]
@@ -716,7 +716,7 @@ BRADONT&  43.325780 & -77.706432 &  ~~1.44 & ~2.00        & Braddock Bay, Lake O
 
 \begin{figure}[htbp!]
   \centering
-  \includegraphics[height=8.0cm]{./Images/ROI_RocEmbayment130919-eps-converted-to.pdf}
+  \includegraphics[height=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/ROI_RocEmbayment130919-eps-converted-to.pdf}
   \caption{Landsat 8 image acquired on 09-19-2015 (scene LC80160302013262LGN00) showing the study area, the Rochester Embayment. The labels indicate the sites of the field collection at the same time as the satellite overpass (\autoref{tab:Sites}).\label{fig:RrsROIs130919} } 
 \end{figure}
 
@@ -751,7 +751,7 @@ Additionally, the results will be compared with the products derived in the SeaW
 
 
 \section{Concluding Remarks}
-The purpose of this chapter was to introduce the methodology required to achieve the objectives defined in the Chapter \S\ref{ch:objectives}. First, we began by explaining the different atmospheric correction techniques that will be investigated in this research along with the solar-glint removal algorithm. These atmospheric correction techniques include two different approaches. The first approach are methods applied to ocean color satellites. The second one is the model-based ELM method. The in-water constituent retrieval process was presented. The LUT generation and the metrics used to perform the retrieval were described. Additionally, the ground truth data collection was briefly explained. Finally, how the results will be validated was described. 
+The purpose of this chapter was to introduce the methodology required to achieve the objectives defined in the Chapter \S\ref{ch:objectives}. First, we began by explaining the different atmospheric correction techniques that will be investigated in this research along with the solar-glint removal algorithm. These atmospheric correction techniques include two different approaches. The first approach are methods applied to ocean color satellites. The second one is the MoB-ELM method. The in-water constituent retrieval process was presented. The LUT generation and the metrics used to perform the retrieval were described. Additionally, the ground truth data collection was briefly explained. Finally, how the results will be validated was described. 
 
 The next Chapter (\S\ref{ch:results}) will present the data and laboratory measurements available to date, along with preliminary results. These results include the atmospheric correction applied to Landsat-8 imagery, concentration of CPAs maps.
 
