--- a/Summary.tex
+++ b/Summary.tex
@@ -4,7 +4,7 @@
 \chapter{Conclusions/Summary and Recommendations}
 \section{Conclusions}
 
-% From San Diego Paper
+% ----- added From SPIE SD
 \label{sec:conc}  % \label{} allows reference to this section
 
 \subsection{Comparison with Standard Algorithms}
@@ -15,7 +15,7 @@ When retrieved chlorophyll-{\it a} concentrations ($C_a$) are compared with {\it
 These results demonstrate that for Case 2 waters, the solution for the ocean color measurements likely needs to be local and not global, as opposed to Case 1 waters. This local solution as implemented here, the combined MoB-ELM algorithm with Concha and Schott's $C_a$ retrieval algorithm, requires some knowledge of the waters to be studied, such as inherent optical properties (IOPs) and CPA concentration in at least one site.
 
 The presented work is a very limited study using only a single data set. The results need to be tested on a much larger set of data to see if the can be generalized. This implies that more {\it in situ} data need to be collected.
-
+% --------- end SPIE SD
 % -------------------------------------
 \section{Future Work}
 \subsection{Hydrodynamics models} 
