--- a/Results.tex
+++ b/Results.tex
@@ -33,8 +33,9 @@ After collection, the water samples are analyzed in laboratory. These lab measur
 
 % ------------------------------
 \section{Atmospheric Correction}
+\subsection{MoB-ELM}
 
-Preliminary results of the model-based ELM atmospheric correction methods for different water bodies in the Rochester Embayment area are shown in \autoref{fig:waterpxs}. This figure shows the spectrum of the water pixels in reflectance values after applying the model-based ELM atmospheric correction. These curves exhibit shapes that correspond with the shapes of typical water pixels. \autoref{fig:refcomp} shows water reflectance spectra as preliminary results from the model-based ELM method (solid lines) compared with results from a traditional ELM method (dashed lines) for four different ROIs in the Rochester Embayment area (Cranberry Pond, Long Pond, and nearshore and offshore of the Lake Ontario, labeled as Cranb, LongS, OntNS and OntOS in \autoref{fig:0910913Sites}, respectively). 
+As an example, the pixels used for the atmospheric correction of the Landsat 8 scene acquired on 09-19-2013 used in this work are shown in \autoref{fig:MOBELMpxls}\todo{connect with Methodology figure}. Preliminary results of the model-based ELM atmospheric correction methods for different water bodies in the Rochester Embayment area are shown in \autoref{fig:waterpxs}. This figure shows the spectrum of the water pixels in reflectance values after applying the model-based ELM atmospheric correction. These curves exhibit shapes that correspond with the shapes of typical water pixels. \autoref{fig:refcomp} shows water reflectance spectra as preliminary results from the model-based ELM method (solid lines) compared with results from a traditional ELM method (dashed lines) for four different ROIs in the Rochester Embayment area (Cranberry Pond, Long Pond, and nearshore and offshore of the Lake Ontario, labeled as Cranb, LongS, OntNS and OntOS in \autoref{fig:0910913Sites}, respectively). 
 
 The traditional ELM method was performed with reflectance measurements taken in the field. A reflectance measurement taken of the sand of Charlotte Beach, Rochester, NY (labeled as SandDry in \autoref{fig:0910913Sites}) was used for the bright pixel while a reflectance measurement taken at the site OntNS was used for the dark pixel. The radiance values were taken from the corresponding ROIs in the Landsat 8 image. 
 
@@ -43,30 +44,56 @@ As can be seen in \autoref{fig:refcomp}, the atmospheric correction algorithm pr
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
     \centering
-      \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixels_2.eps}
-      \caption{Water pixel spectra after applying the model-based ELM atmospheric correction method.}
-      \label{fig:waterpxs}
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/ELMrad130929_150422}
     % \vspace{1.5cm}
-    % \centerline{(a)}\medskip
+    \centerline{(a)}\medskip
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
-      \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixelComparisonELMELMbased}
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/ELMRrs130929_150422}
+    % \vspace{1.5cm}
+    \centerline{(b)}\medskip
+  \end{minipage}
+  \caption{Example of the bright and dark pixel used in the MoB-ELM atmospheric correction method for Landsat 8 scene acquired on 09-19-2013. The radiance spectra are obtained from pseudo invariant features for the bright pixel and from a region in the lake with low level of concentrations. The remote-sensing reflectance ($R_{rs}$) spectra for the bright pixels are obtained from the Provisional Landsat 8 Surface Reflectance product from USGS over a bright object in the scene. The $R_{rs}$ spectra of the dark pixel are obtained from the Hydrolight simulating a region in the lake with low level of concentrations.\label{fig:MOBELMpxls} } 
+\end{figure}
+
+\begin{figure}[htb]
+    \centering
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixels_2.eps}
+      \caption{Water pixel spectra after applying the model-based ELM atmospheric correction method.}
+      \label{fig:waterpxs}
+\end{figure}
+
+
+\begin{figure}[htb]
+    \centering
+      \includegraphics[width=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/NESSF14/latex/WaterPixelComparisonELMELMbased}
       \caption{Comparison between traditional ELM (dashed lines) and model-based ELM (solid lines).}
       \label{fig:refcomp}
-    % \vspace{1.5cm}
-    % \centerline{(b)}\medskip
-  \end{minipage}
-  % \caption{Water pixel spectra: (a) after atmospheric correction and (b) comparison with traditional ELM method.}
 \end{figure}
+\subsection{SeaDAS-SWIR}
+\label{subsec:seadasswir}
+The second method analyzed in this work was the Gordon and Wang\cite{Gordon:1994} approach for atmospherically correcting satellite data over water, hereafter SeaDAS-SWIR. This method is implemented in the l2gen tool of the the Sea-viewing Wide Field-of-View Sensor (SeaWiFS) Data Analysis System (SeaDAS) software package, distributed by NASA's Ocean Biology Processing Group (OBPG) (more info: \url{http://seadas.gsfc.nasa.gov/}). The l2gen tool processes heritage Ocean-Color sensor (e.g. MODIS, SeaWiFS, OCTS or CZCS) data (Level 1) and generates Level 2 geophysical products by applying atmospheric corrections and bio-optical algorithms to the sensor. The l2gen tool includes a set of different atmospheric correction methods and variations, the Gordon and Wang's algorithm being one of them. The capability for processing OLI data was recently made fully operational in the SeaDAS version 7.2\cite{Franz:2015}. 
+
+The atmospheric correction methods based on the Gordon and Wang approach use standard radiative transfer methods to compute and remove scattering by the air molecules, and two bands where the water contribution is negligible to estimate the aerosol contribution for the rest of the bands. Formerly, two NIR bands were used for estimating the aerosol contribution, but a combination of NIR and SWIR bands could be used when there is some water contribution in the NIR wavelengths\cite{Wang2009}. For this analysis, The bands used for the atmospheric correction were the SWIR 1 and SWIR 2 (SeaDAS-SWIR, band 6 and 7). The OLI's NIR band was not used because the water contribution in the NIR band cannot be considered negligible due to the presence of highly turbid waters in the scene (i.e. ponds). Water has much stronger absorption at the SWIR wavelengths than at the NIR wavelengths. 
+
+A full description of the OLI's processing in SeaDAS is described in \cite{Franz:2015}. The processing in SeaDAS includes a vicarious calibration derived from the marine optical buoy (MOBY) near Lanai, Hawaii. For the atmospheric correction in SeaDAS, the option used in this study was the operational atmospheric correction scheme (aer\_opt=-2), with the shortest and longest sensor wavelength for aerosol models selection equal to band 6 and band 7 (aer\_wave\_short=1609 and aer\_wave\_long=2201). Since a default land/water mask fine enough to resolve the ponds in the scene is not included in SeaDAS, all the pixels were forced to be processed as ocean (proc\_ocean=2) and the land mask was set to the ``landmask\_null.dat'' file. Additionally, in order to increase the SNR of SWIR bands and avoid $R_{rs}$ retrieval failing in the ponds, the SWIR bands were spatially averaged with a 5x5 window. This was accomplished by including a filter (filter\_opt=1) and modifying the default SeaDAS's file ``msl12\_filter.dat''.
+% -----------------------------------------------------------
+\subsection{Acolite-SWIR}
+The third atmospheric correction method analyzed was the implementation of the \cite{Gordon:1994}'s approach in the atmospheric correction for OLI lite (Acolite) tool (more info: \url{http://odnature.naturalsciences.be/remsem/software-and-data/acolite}). Acolite is a binary distribution of the OLI processing developed by the Royal Belgian Institute of Natural Science (RBINS). Acolite was used as a clone for the SeaDAS-SWIR method described above in \S~\ref{subsec:seadasswir}. Therefore, the option used was the default ``SWIR atmospheric correction'' with the ``Franz Ave'' gains for the vicarious calibration\cite{Franz:2015}.
+% -----------------------------------------------------------
+\subsection{SeaDAS-MUMM}
+The fourth method evaluated in this work was the Ruddick {\it et al.}'s atmospheric correction approach \cite{Ruddick:2000bs}, hereafter SeaDAS-MUMM (MUMM: Management Unit of the North Sea Mathematical Models). This method is a modification of \cite{Gordon:1994}'s algorithm for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. In this study, this method was applied using its implementation available in SeaDAS (aer\_opt=-10), using bands 4 and 5 and setting the calibration parameter $\alpha=8.7$ for OLI, as suggested by \cite{Vanhellemont2014} and \cite{Vanhellemont2014a}. 
+          % -10: Multi-scattering with MUMM correction
+          %      and MUMM NIR calculation
 
 % ------------------------------
 \subsection{$R_{rs}$ Comparison}
 
-The four atmospheric correction methods (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM) described in Section~\ref{sec:atmcorr} \todo{Check section!} are compared in this section. These algorithm were applied to the 09-19-2013 Landsat 8 image. A mask was created to mask out all pixels but water pixels. This mask was created by thresholding the Landsat 8's SWIR 2 band. \autoref{fig:Rrs443} and \autoref{fig:Rrs561} show the $R_{rs}$ for band 1 and 3 for these methods. When analyzed visually, the similarities among the methods are higher in band 3 than band 1. For band 1, SeaDAS-SWIR and SeaDAS-MUMM look similar in both the lake and ponds. Also, the SeaDAS-SWIR method exhibits some noise in band 1. This is caused due to the low SNR in SWIR bands used for the atmospheric correction. Note that there are some bottom effect in the lake's shoreline causing all methods to retrieve high $R_{rs}$ in those areas, which is not the case. This should be taken in account for future processing by masking the areas where the water is clear enough that the bottom can be seen.
+\todo{Include new figures in the description} The four atmospheric correction methods (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM) described in Section~\ref{sec:atmcorr} \todo{Check section!} are compared in this section. These algorithm were applied to the 09-19-2013 Landsat 8 image. A mask was created to mask out all pixels but water pixels. This mask was created by thresholding the Landsat 8's SWIR 2 band. \autoref{fig:Rrs443}--\ref{fig:Rrs561} show the $R_{rs}$ for band 1--3 for these methods. When analyzed visually, the similarities among the methods are higher in band 3 than band 1. For band 1, SeaDAS-SWIR and SeaDAS-MUMM look similar in both the lake and ponds. Also, the SeaDAS-SWIR method exhibits some noise in band 1. This is caused due to the low SNR in SWIR bands used for the atmospheric correction. Note that there are some bottom effect in the lake's shoreline causing all methods to retrieve high $R_{rs}$ in those areas, which is not the case. This should be taken in account for future processing by masking the areas where the water is clear enough that the bottom can be seen.
 
-Another comparison of $R_{rs}$ at $443nm$ and $561nm$ among all four atmospheric correction methods is shown in \autoref{fig:13262Rrs443} and \autoref{fig:13262Rrs561} as scatter plots with a regression line in red solid lines. Again, all the methods show more similarities in band 3 than band 1, which is corroborated by the smaller offset values for band 3 than band 1, which translates to more closeness to the $1:1$ line. This indicates that there is a higher correlation for band 3 than band 1 for all methods. \autoref{tab:RrsCompMethod} shows the slope and offset for the regression lines and the goodness of fit $R^2$ values for the comparison among all methods and for all bands. The $R^2$ values show a good correlation for all cases in the range from $0.7090$ to $0.9302$ (underlined in \autoref{tab:RrsCompMethod}). \autoref{tab:RrsCompMethod} also shows the number of valid pixels retrieved $N$ (non negative) and the root mean squared error (RMSE) between the methods compared. 
+Another comparison of $R_{rs}$ at $443nm$ and $561nm$ among all four atmospheric correction methods is shown in \autoref{fig:13262Rrs443}--\ref{fig:13262Rrs561} as scatter plots with a regression line in red solid lines. Again, all the methods show more similarities in band 3 than band 1, which is corroborated by the smaller offset values for band 3 than band 1, which translates to more closeness to the $1:1$ line. This indicates that there is a higher correlation for band 3 than band 1 for all methods. \autoref{tab:RrsCompMethod} shows the slope and offset for the regression lines and the goodness of fit $R^2$ values for the comparison among all methods and for all bands. The $R^2$ values show a good correlation for all cases in the range from $0.7090$ to $0.9302$ (underlined in \autoref{tab:RrsCompMethod}). \autoref{tab:RrsCompMethod} also shows the number of valid pixels retrieved $N$ (non negative) and the root mean squared error (RMSE) between the methods compared. 
 
 All methods produced negative $R_{r}$ values. These negative values indicates that the atmosphere contribution has been over estimated. These negative values are shown in \autoref{tab:RrsCompMethod} as percentage of the total of water pixels for each method compared. These negative values were not used in the comparison. Finally, \autoref{tab:RrsCompMethod} shows the percentage of total number of water pixels used in the comparison (labeled as Used $[\%]$). It can be seen that the Gordon and Wang's based methods generate more negative values compared with the MoB-ELM method overall. 
 
@@ -82,7 +109,7 @@ All methods produced negative $R_{r}$ values. These negative values indicates th
 
 
 
-% \begin{figure}[htbp!]
+% \begin{figure}[htb]
 %   \centering
 %   \includegraphics[height=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collated2013262_2_band_1_D.png}
 %   \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
@@ -92,7 +119,7 @@ All methods produced negative $R_{r}$ values. These negative values indicates th
 %  \put (20,85) {\huge$\displaystyle\gamma$}
 % \end{overpic}
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 200 0 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/subset_0_of_Collocated13262_ACOSWIR_MOB_SEA_Rrs_443MOBdivpi}
@@ -134,7 +161,7 @@ All methods produced negative $R_{r}$ values. These negative values indicates th
   \caption{Remote-sensing reflectance ($R_{rs}$) at $443nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs443} } 
 \end{figure}
 % %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 150 40 150,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_483_MOB}
@@ -177,7 +204,7 @@ All methods produced negative $R_{r}$ values. These negative values indicates th
   \caption{Remote-sensing reflectance ($R_{rs}$) at $482nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs482} } 
 \end{figure}
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 155 40 150,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_561_MOB}
@@ -220,7 +247,7 @@ All methods produced negative $R_{r}$ values. These negative values indicates th
   \caption{Remote-sensing reflectance ($R_{rs}$) at $561nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM..\label{fig:Rrs561} } 
 \end{figure}
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 40 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_655_MOB}
@@ -326,7 +353,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
  \end{tabular}
 \end{table}
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 280 0 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-MUMM.png}
@@ -380,7 +407,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 280 0 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_SeaDAS-MUMM.png}
@@ -434,7 +461,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 280 0 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-MUMM.png}
@@ -488,7 +515,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 280 0 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
@@ -542,7 +569,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompONTNS.png}
@@ -581,7 +608,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompLONGN.png}
@@ -624,7 +651,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=110 0 140 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B1.png}
@@ -659,9 +686,64 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 
 
 % ------------------------------
-\section{Retrieval}
+\section{Retrieval of Color Producing Agents (CPAs)}
 
-Preliminary results for concentration maps for each CPA over the Rochester Embayment, Rochester, NY are shown in Figure~\ref{fig:retrievalresults}. The expected trend of having low concentration of CPAs in the offshore of Lake Ontario and higher concentrations in the nearby ponds (Long Pond and Cranberry Pond) can be seen. 
+% ------------ added from SPIE SD
+\subsection{Spectral Matching and LUT Approach}
+\label{subsec:LUTapproach}
+The first chlorophyll-{\it a} retrieval algorithm used in this study was the algorithm developed by \cite{Concha2013IGARSS}. This algorithm uses a spectrum-matching and look-up-table (LUT) methodology to extract CPA concentrations from $R_{rs}$ data. A LUT of $R_{rs}$ spectra is created in Hydrolight \cite{MobleyHE} with IOPs and CPA concentrations measured in the field as inputs. The parameters used to create this LUT are shown in \autoref{tab:LUTconc}. These parameters are chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$) for the scattering phase function selection.
+
+\begin{table}[htb]
+\caption{Input parameters for the LUT generation in Hydrolight for the Landsat 8 image acquired on 09-19-2013. These parameters are inherent optical properties (IOPs) for the lake (ONTNS) and the ponds (LONGS), chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$). \label{tab:LUTconc}} 
+\vspace{.07cm}
+\small
+\centering
+    \begin{tabular}{ccccc}
+    \hline \hline
+            IOPs Input & \bfseries{$C_a$} & \bfseries{$TSS$} & \bfseries{$a_{CDOM}(440nm)$} & \bfseries{$b_b/b$}    \\
+                   & $[mg~m^{-3}]$        & $[g~m^{-3}]$       &  $[1/m]$           & $[\%]$            \\ \hline \hline
+\multirow{8}{*}{ONTNS}  &  0.1      & 1.0     &  0.11   &  0.3  \\
+    &  0.5      & 2.0   &  0.15     &  0.4  \\
+    &  1.0      & 5.0   &  0.21     &  0.5  \\
+    &  3.0      & 10.0  &  0.6      &  0.6  \\ 
+    &  10.0     & --    &  --     &  0.7  \\  
+    &  20.0     & --    &  --     &  1.0  \\  
+    &  40.0     & --    &  --     &  1.4  \\
+    &  --       & --    &  --     &  2.0  \\ \hline
+
+\multirow{8}{*}{LONGS}   &  60.0   & 25.0    &  1.0    &  0.3  \\
+    &  90.0   & 45.0    &  1.2    &  0.4  \\
+    &  110.0  & 50.0    &  --     &  0.5  \\
+    &  --     & --      &  --     &  0.6  \\  
+    &  --     & --      &  --     &  0.7  \\  
+    &  --     & --      &  --     &  1.0  \\   
+    &  --     & --      &  --     &  1.4  \\  
+    &  --     & --      &  --     &  2.0  \\  \hline \hline
+% --      &  135.0  & --      &  --     &  --   \\  
+% --      &  150.0  & --      &  --     &  --   \\ \hline 
+    \end{tabular}
+  \end{table}
+
+Then, this algorithm finds the closest match in the least-squared sense for the $R_{rs}$ of water pixels with unknown CPA concentrations in the LUT of water pixels with known CPA concentrations. At this point, the closest element has discrete CPA concentration values corresponding to values used for the LUT generation (see \autoref{tab:LUTconc}). Finally, a non-linear interpolation is used to interpolate between the closest match's neighbors in order to obtain continuous values for the three CPAs simultaneously. In this study, this algorithm was applied to the $R_{rs}$'s results from the MoB-ELM method only.
+% -----------------------------------------------------------
+\subsection{Bio-Optical Algorithm for $C_a$ Retrieval}
+\label{subsec:bioopticalapproach}
+The second chlorophyll-{\it a} retrieval algorithm was the standard NASA algorithm OC3 \cite{OReilly2000}, which is a three-band empirical $R_{rs}(\lambda)$ band ratio algorithm, as suggested by \cite{Franz:2015}. Band ratio algorithms try to find a good fit between a band ratio $R$ and $C_a$. The chlorophyll-{\it a} results from the OC3 algorithm were obtained from the l2gen tool in SeaDAS when the SeaDAS-SWIR and SeaDAS-MUMM results were generated. Additionally, The OC3 algorithm was applied to the Acolite-SWIR results using the band math tool in SeaDAS. For the OLI case, the OC3 algorithm uses band 1 ($443nm$) or band 2 ($483nm$), and band 3 ($561nm$) for the band ratio, i.e.
+
+\begin{equation}
+\begin{gathered}
+  C_a = 10^{\gamma}\\
+  \gamma = a_0+a_1\chi+a_2\chi^2+a_3\chi^3+a_4\chi^4\\
+  \chi = log_{10}(R)\\
+  R = \frac{max(R_{rs}(443,483))}{R_{rs}(561)}
+\end{gathered}
+\end{equation}
+
+\noindent where $a_0-a_4$ are the empirical regression coefficients. The empirical coefficients used in this study were the tuned values for OLI provided in SeaDAS (chloc3\_coef = [0.2412,-2.0546,1.1776,-0.5538,-0.4570]).
+
+% --------------- end SPIE SD
+
+\todo{Connect with previous paragraph} Preliminary results for concentration maps for each CPA over the Rochester Embayment, Rochester, NY are shown in Figure~\ref{fig:retrievalresults}. The expected trend of having low concentration of CPAs in the offshore of Lake Ontario and higher concentrations in the nearby ponds (Long Pond and Cranberry Pond) can be seen. 
 \begin{figure}[htb]
 \centering
 \includegraphics[trim=200 100 180 0,clip,height=9cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2014_RITResearchSymposium/Images/RetrievalResults.eps}
@@ -703,7 +785,7 @@ The next step was to apply the algorithms described in Section~\ref{sec:chlretri
 \noindent where $C_{ret}$ is the retrieved concentration, $C_{mea}$ is the measured concentration, and $n=1\dots N$ is the number of measured concentrations. The NRMSE for the $C_a$ for each algorithm are shown in \autoref{fig:NRMSE130919CHL}. The best results are obtained from the MoB-ELM method with overall values less than $10\%$.
 %-------------
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 40 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_MOB_D_R_R}
@@ -746,7 +828,7 @@ The next step was to apply the algorithms described in Section~\ref{sec:chlretri
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{1.0\linewidth}
     \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=10cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/CHLmeavsret.png}
@@ -756,7 +838,7 @@ The next step was to apply the algorithms described in Section~\ref{sec:chlretri
   \caption{Comparison retrieved versus measured $R_{rs}$ for the sites on the 90-19-2013 collection. \label{fig:13262RrsMeaVSRet}} 
 \end{figure}
 % %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 250 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_C_a_Acolite-SWIR_SeaDAS-MUMM.png}
@@ -803,7 +885,7 @@ The next step was to apply the algorithms described in Section~\ref{sec:chlretri
   \caption{$C_a$ comparison among all the four method analyzed in this work. \label{fig:13262Chlor} } 
 \end{figure}
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htbp!]
+\begin{figure}[htb]
   \centering
   \includegraphics[height=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/13262_NRMSE_CHL.png}
   \caption{Comparison of the retrieved results for $C_a$ with {\it in situ} data using the normalized root mean squared error (NRMSE). The $R_{rs}$ results from the MoB-ELM were used for the Concha and Schott's retrieval of $C_a$, while the results of the rest of the atmospheric correction algorithms were used for the NASA's bio-optical algorithm. The MoB-ELM results combined with the Concha and Schott's $C_a$ retrieval give the best results.\label{fig:NRMSE130919CHL} } 
