\makeapproval not working. \makePHDapproval modified to not include word proposal, and dissertation instead

--- a/thesisfrontmatter.sty
+++ b/thesisfrontmatter.sty
@@ -142,11 +142,13 @@
         \underline{CERTIFICATE OF APPROVAL} \\
         \vspace{0.5cm}
         \rule{14.5cm}{0.5pt} \\ \medskip
-        \letters ~DEGREE PROPOSAL \\
+        %\letters ~DEGREE PROPOSAL \\ JC
+        \letters ~DEGREE \kindallcap \\
         \rule{14.5cm}{0.5pt} \\ \medskip
         \vspace{0.5cm}
         \fontsize{12}{15}\selectfont
-        The \letters ~Degree Proposal ~of \@degreeauthor \\
+        % The \letters ~Degree Proposal ~of \@degreeauthor \\ JC
+        The \letters ~Degree \kindcap ~of \@degreeauthor \\
         has been examined and approved by the \\
         \kind ~committee as satisfactory for the \\
         \kind ~required for the \\
