RS of Env. paper added. Need to merge everything together...

--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -780,12 +780,17 @@ The HydroLight physical model has the following characteristics:
 \end{itemize}
 
 % ----------------------------------------------------
+\subsection{SeaDAS}
+
+% ----------------------------------------------------
+\subsection{ACOLITE}
+
 \todo{complete this section}
 % \section{State of the Research}
 
 % As shown in \cite{GeraceThesis}
 % and \cite{Mobley:2005} and \cite{Lesser}
 
-
+% ----------------------------------------------------
 \section{Concluding Remarks}
 An overview of fundamental concepts that are relevant to this research was presented in this chapter. We began by describing the different energy contributions to the signal captured by the sensor followed by a description of the water constituents and their optical properties in the form of absorption and scattering coefficients. We continued with the description of how the atmosphere interacts with photons and its effect in the total signal along with the glint effect due to energy reflected in the water surface. The in water radiative transfer theory was also treated. A brief description of the Landsat-8 instrument was described. Finally, some tools used in this research were overviewed. These tools are the ELM atmospheric correction method, the Landsat surface Reflectance CDR and Hydrolight. The next section will present the methodology that will be used to accomplish this research's goal.
