--- a/Introduction.tex
+++ b/Introduction.tex
@@ -4,13 +4,24 @@
 \chapter{Introduction}
 \label{ch:introduction} 
 \pagenumbering{arabic} 
+
 Ocean color studies at a global scale, such as chlorophyll-{\it a} level trends in oceans, can be performed by the heritage Ocean Color satellites (e.g. SeaWiFS, MODIS). These satellites satisfied the spatial requirement for these kinds of studies. However, when the region of interests include coastal or inland waters, which could be considered Case 2 water, their spatial resolution of roughly a thousand meters are not enough to resolve smaller water bodies. These kinds of waters are important for us, because it is these kinds of waters that we have the most interaction with, like for drinking or recreation. 
 
+% New medium spatial resolution
+The launching of a new generation of high spatial resolution satellites (e.g. Landsat 8, Sentinel 2) is opening a complete new era in the remote sensing of coastal and inland waters. New sensor specifications could meet the requirements needed to have available the same kinds of tools (e.g. Chl-{\it a} product) that the first generation of ocean color satellites, such as the Moderate Resolution Imaging Spectroradiometer (MODIS) (\cite{Esaias1998}) and the Sea-viewing Wide Field-of-view Sensor (SeaWiFS) (\cite{McClain2004}), made available for open ocean science more than a decade and half ago. The hope is to have these tools for coastal and inland waters available at a global scale and on a regular basis, similar to MODIS capabilities for open oceans. Although Landsat 8 does not have a daily frequency as MODIS does, its 16-day frequency makes it a good candidate to accomplish this endeavor, and most importantly, prepares the way for future missions with similar spatial resolution specifications (e.g. Sentinel 2, Hyperspectral Infrared Imager (HyspIRI)).
+
 % Landsat
-The Landsat project has been monitoring the earth for over four decades, being the longest uninterrupted data set available. The Landsat satellites' main mission is to image the land areas of the earth and therefore there are typically no open ocean (case 1 water) images available. This is the reason why Landsat satellites have been underestimated by the ocean color community for the study of water bodies. In addition, the Landsat instruments have generally had broad bands and low SNR when compared to heritage ocean color satellites such as SeaWiFS and MODIS. Carrying two instruments onboard, the Operational Land Imager (OLI) and the Thermal InfraRed Scanner (TIRS), Landsat 8 is the first of a new generation of Landsat satellite with state-of-the-art technology. With its 12-bit quantization and improved signal-to-noise ratio (SNR), OLI is a big improvement to the Landsat mission. In addition, OLI includes a new coastal band that increased the spectral resolution of the instrument. These improvements are the main drivers to hypothesize that the Landsat 8 satellite will definitely have a better performance in water quality studies than its predecessors. Since its launch in 2013, the Operational Land Imager (OLI) instrument onboard Landsat 8 has created high expectations in the ocean color community. Its spatial resolution of $30m$ and its improved signal-to-noise ratio (SNR) compared with its predecessors make Landsat 8 a perfect candidate to be used in coastal and inland water studies. Therefore, the overall objective of this research is to demonstrate that the new generation of Landsat satellites are capable of accurately retrieving water constituents.
+The Landsat project has been monitoring the earth for over four decades, being the longest uninterrupted data set available. The Landsat satellites' main mission is to image the land areas of the earth and therefore there are typically no open ocean (case 1 water) images available. This is the reason why Landsat satellites have been underestimated by the ocean color community for the study of water bodies. In addition, the Landsat instruments have generally had broad bands and low SNR when compared to heritage ocean color satellites such as SeaWiFS and MODIS. Carrying two instruments onboard, the Operational Land Imager (OLI) and the Thermal InfraRed Scanner (TIRS), Landsat 8 is the first of a new generation of Landsat satellite with state-of-the-art technology \cite{Irons:2012}. With its 12-bit quantization and improved signal-to-noise ratio (SNR), OLI is a big improvement to the Landsat mission. In addition, OLI includes a new coastal band that increased the spectral resolution of the instrument. These improvements are the main drivers to hypothesize that the Landsat 8 satellite will definitely have a better performance in water quality studies than its predecessors. Since its launch in 2013, the Operational Land Imager (OLI) instrument onboard Landsat 8 has created high expectations in the ocean color community. Its spatial resolution of $30m$ and its improved signal-to-noise ratio (SNR) compared with its predecessors make Landsat 8 a perfect candidate to be used in coastal and inland water studies. \cite{Roy:2014} stated this potential use of Landsat 8 for fresh and coastal water studies, mainly due to a reported SNR that exceeded expectations and the new coastal band.\todo{develop more} Therefore, the overall objective of this research is to demonstrate that the new generation of Landsat satellites are capable of accurately retrieving water constituents.
 
-The retrieval of water components is in general performed in the reflectance domain, so the very first step in this work is to perform a high quality atmospheric correction to the radiance image from Landsat 8. This is a complex task to perform over water because the signal leaving the water that reaches the sensor is very small when compared to the signal reaching the sensor produced by atmospheric scattering. Most of the atmospheric correction algorithms applied to Ocean Color satellites (e.g. SeaWiFS and MODIS) are not suitable for highly turbid coastal water \cite{Patt2003}. In this work, different approaches for atmospheric correction will be investigated. The first atmospheric correction algorithm investigated is the model-based empirical line method (MOB-ELM) that uses a combination of an in-water radiative transfer model over water and a Landsat reflectance product to determine the bright and dark pixels in the image. The second one is the standard SeaWiFS/MODIS atmospheric correction algorithm that uses SWIR bands (\cite{Wang:2007}). The water-leaving reflectance values obtained after atmospheric correction are validated by comparison with water surface reflectance measured in situ. 
+\cite*{Gerace:2013} demonstrated that the spectral coverage and radiometric resolution of OLI should dramatically improve our ability to simultaneously retrieve the CPA's concentration from water bodies. \cite{Vanhellemont2014} and \cite{Vanhellemont:2015} created a tool to apply the standard algorithm for atmospheric correction over water developed by \cite{Gordon:1994} to Landsat 8 over turbid and extremely turbid waters. In \cite{Vanhellemont:2015}, after atmospheric correction, they used the end product for detection of high concentrations of black sediments, but neither concentration values nor comparison with field measurements were reported. \cite{Franz:2015} describes an implementation of the atmospheric corrections developed by \cite{Gordon:1994} applied to Landsat 8 in the SeaWiFS Data Analysis System (SeaDAS) software package (URL: \url{http://seadas.gsfc.nasa.gov/}). A comparison of the Landsat 8's retrieved $R_{rs}$ and chlorophyll-{\it a} concentration over Chesapeake Bay with results from MODIS, SeaWiFS and {\it in situ} historical chlorophyll-{\it a} measurements is presented showing a relatively good agreement. Though again, no direct comparison to simultaneously measured values were available.
 
+% Atmospheric Correction
+The retrieval of water components is in general performed in the reflectance domain, so the very first step in this work is to perform a high quality atmospheric correction to the radiance image from Landsat 8. This is a complex task to perform over water because the signal leaving the water that reaches the sensor is very small when compared to the signal reaching the sensor produced by atmospheric scattering. Most of the atmospheric correction algorithms for open oceans (Case 2 waters) are based on the methods developed for ocean color satellites by \cite{Gordon:1997}. These methods are based on the fact that the signal leaving the water does not contribute to the overall signal beyond the near infrared (NIR) part of the spectrum; so the signal reaching the sensor is caused only by atmospheric scattering (\cite{Gordon:1994}). This is known as the {\it black pixel assumption}. This concept can be expanded to the short wave infrared (SWIR) bands when the black pixel assumption is not valid in the NIR bands, which is the case for Case 2 and highly productive Case 1 waters (\cite{Wang:2007}). Unfortunately, most of these methods are not suitable for highly turbid coastal water, although different modifications to these algorithms have been suggested (\cite{Patt2003}).
+
+In this work, different approaches for atmospheric correction will be investigated. The first atmospheric correction algorithm investigated is the model-based empirical line method (MOB-ELM) that uses a combination of an in-water radiative transfer model over water and a Landsat reflectance product to determine the bright and dark pixels in the image. The second one is the standard SeaWiFS/MODIS atmospheric correction algorithm that uses SWIR bands (\cite{Wang:2007}). The water-leaving reflectance values obtained after atmospheric correction are validated by comparison with water surface reflectance measured in situ. 
+
+% Retrieval
 After having corrected the image, the next step is to apply a retrieval algorithm that outputs water component retrieval maps of the main water components (chlorophyll, {\todo{or SM?} sediment} and colored dissolved organic matter (CDOM)). A spectral matching and look-up table (LUT) approach is utilized. It uses a least square error minimization algorithm to find the best match for a specific reflectance signal in a LUT of spectral water-leaving reflectance curves. The LUT is created using HydroLight 5, an in-water radiative transfer model (\cite{Mobley:2005}). Each curve in the LUT has a specific set of water component concentrations. This is performed on a pixel-by-pixel basis. The concentration values obtained from the retrieval algorithm are validated by comparison with concentration measured in the lab from water bodies present in the Landsat 8 image.
 
-In order to have outputs that are representative of the water bodies that are being studied, Inherent Optical Properties (IOPs) of those specific waters have to be input to the HydroLight model. To accomplish this, collections of water samples were conducted at the same time that the Landsat 8 satellite passed over the area of study (Rochester, NY). After collection, these water samples were analyzed in the lab to obtain IOPs for the main water constituents. Furthermore, apparent optical properties (AOPs) and backscattering measurements were also collected for further comparison and to pursue closure between HydroLight AOPs results and in-situ AOPs measurements.
+% Data Collection and Lab Measurements
+In order to have outputs that are representative of the water bodies that are being studied, Inherent Optical Properties (IOPs) of those specific waters have to be input to the HydroLight model. To accomplish this, collections of water samples were conducted at the same time that the Landsat 8 satellite passed over the area of study (the Rochester Embayment, Rochester, NY). After collection, these water samples were analyzed in the lab to obtain IOPs for the main water constituents. Furthermore, apparent optical properties (AOPs) and backscattering measurements were also collected for further comparison and to pursue closure between HydroLight AOPs results and in-situ AOPs measurements.
