Modified first pages with correct info

--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -566,6 +566,11 @@ where $K_d(z,\lambda)$ is the {\it spectral diffuse attenuation coefficient} for
 It is important to note that AOPs are not additive as the IOPs. Also, AOPs can not be measured in the lab or on a water sample, therefore they must be measured in situ.
 
 % ------------------------------------------
+\subsection{Standard Algorithms (NASA)}
+\subsubsection{$C_a$}
+\subsubsection{$TSS$}
+\subsubsection{$CDOM$}
+% ------------------------------------------
 % \subsection{Constituent Retrieval}
 
 
@@ -780,10 +785,10 @@ The HydroLight physical model has the following characteristics:
 \end{itemize}
 
 % ----------------------------------------------------
-\subsection{SeaDAS}
+\section{SeaDAS}
 
 % ----------------------------------------------------
-\subsection{ACOLITE}
+\section{ACOLITE}
 
 \todo{complete this section}
 % \section{State of the Research}
