--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[]{book}
+\documentclass[draft]{book}
 
 \usepackage{graphicx}
 
@@ -183,11 +183,12 @@
 %******************************************************************************************************
 \begin{document}
 
-\degreetitle{The Use of Landsat-8 for Monitoring of Fresh and Coastal Water}
+\degreetitle{The Use of Landsat 8 for Monitoring of Fresh and Coastal Water}
 \degreeauthor{Javier A. Concha}
-% \degreedate{October 7, 2014}
-\degreedate{\today{}}
-\prevdegreeA{M.S. Rochester Institute of Technology, 2012}
+\degreedate{November 10, 2015}
+% \degreedate{\today{}}
+\prevdegreeA{B.S. Electronics Engineering, Universidad de Concepci\'on, Chile, 2008}
+\prevdegreeB{M.S. Imaging Science, Rochester Institute of Technology, NY, USA, 2012}
 \advisor{Dr. John R. Schott}
 \memberA{Dr. Anthony Vodacek}
 \memberB{Dr. Charles Bachmann}
@@ -195,6 +196,8 @@
 % \memberD{Dr. Christy Tyler}
 
 \makedeclaration
+
+
 \makePHDproposalapproval
 \makecopyright
 
@@ -208,6 +211,7 @@
 
 \begin{abstract}
 \setlength{\parindent}{20pt}
+% 300 Words max.
 % Background/motivation/context
 The most interaction between humankind and water occurs in coastal and inland waters (Case 2 waters) at a scale of tens or hundred of meters, but there is not yet an ocean color product at this spatial scale. % taken from SPIE SD paper
 % 
